--- a/index.css
+++ b/index.css
@@ -76,3 +76,27 @@ path:hover, circle:hover {
   padding: 5px;
   font-family: arial;
 }
+
+/* Style for legends */
+.legend {
+  list-style: none;
+  padding-bottom: 20px;
+  padding-left: 0px;
+}
+.legend li {
+  float: left;
+  margin-right: 10px;
+}
+.legend span {
+  border: 1px solid #ccc;
+  float: left;
+  width: 12px;
+  height: 12px;
+  margin: 2px;
+}
+.legend .republican {
+  background-color: #d22532;
+}
+.legend .democratic {
+  background-color: #244999;
+}
